--- a/Day 08 Fun with HTML5 Canvas/index.html
+++ b/Day 08 Fun with HTML5 Canvas/index.html
@@ -23,25 +23,25 @@
       let direction = true;
 
       function draw(e) {
-        if (!isDrawing) return; //stop the fn from running when they are not moused down
+        if (!isDrawing) return; // stop the fn from running when they are not moused down
         console.log(e);
         ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
         ctx.beginPath();
-        //start from
+        // start from
         ctx.moveTo(lastX, lastY);
-        //go to
+        // go to
         ctx.lineTo(e.offsetX, e.offsetY);
         ctx.stroke();
-        lastX = e.offsetX;
-        lastY = e.offsetY;
+        [lastX, lastY] = [e.offsetX, e.offsetY];
 
         hue++;
         if (hue >= 360) {
           hue = 0;
         }
-        if (ctx.linewidth >= 100 || ctx.lineWidth <= 1) {
-          direction != direction;
+        if (ctx.lineWidth >= 100 || ctx.lineWidth <= 1) {
+          direction = !direction;
         }
+
         if (direction) {
           ctx.lineWidth++;
         } else {
